# music-stats

./: .env.example  .gitignore  Cargo.toml  LICENSE  lcov.info  mise.toml  readme.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: coverage.yml  gist.yml  release.yml
scripts/: fetch-fixtures.sh
src/: aggregate.rs  app.rs  config.rs  domain.rs  errors.rs  format.rs  github.rs  http.rs  lastfm.rs  lib.rs  main.rs  spotify.rs  types.rs
src/domain/: aggregation.rs  mod.rs  track.rs
src/lastfm/: api_types.rs  client.rs  mod.rs  pagination.rs
src/output/: format.rs  github.rs  mod.rs
src/providers/: lastfm.rs  mod.rs  types.rs  youtube.rs  youtube_http.rs  youtube_json.rs  youtube_parse.rs
src/providers/youtube/: http.rs  mod.rs  parse.rs
tests/: aggregate_test.rs  config.rs  domain_test.rs  format_test.rs  integration_test.rs  lastfm.rs  youtube_http_test.rs  youtube_json.rs  youtube_json_test.rs  youtube_parse.rs  youtube_parse_test.rs
tests/fixtures/: history.html  recent_tracks.json
