[package]
name = "music-stats"
version = "0.2.0"
edition = "2024"
authors = ["David Duran <dadch1404@gmail.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
regex = "1.12.2"
reqwest = { version = "0.12.28", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sha1 = "0.10.6"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
unicode-width = "0.2.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
