[package]
name = "music-stats"
version = "0.2.1"
edition = "2024"
authors = ["David Duran <dadch1404@gmail.com>"]
description = "Saves your music listening history to a GitHub Gist and aggregates plays from Last.fm and YouTube Music."
keywords = ["music", "lastfm", "youtube", "spotify", "cli"]
license = "MIT"
repository = "https://github.com/totallynotdavid/music-stats"
homepage = "https://github.com/totallynotdavid/music-stats"
documentation = "https://docs.rs/music-stats"
readme = "readme.md"
include = ["src/**", "Cargo.toml", "readme.md", "LICENSE"]

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
dotenv = "0.15.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.11.0"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
unicode-width = "0.2.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
